overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -1255,6 +1255,9 @@ PHONES
 
 
 @media (max-width:640px) {
+  body {
+    overflow-x: hidden;
+  }
   .plan__price {
     font-size: 2.25rem;
   }
